syntax = "proto3";

package transport;

service Upload {

    rpc UploadFile(stream UploadFileReq) returns (stream UploadFileResp){}
    rpc DoloadFile(stream DownloadFileReq) returns (stream DownloadFileResp){}

}



message UploadFileReq {
    string name = 1;

    string tag = 2;

    bytes file = 3 ;
}

message UploadFileResp {
    string message = 1;
}


message DownloadFileReq {
    string path = 1;

    string tag = 2 ;
}

message DownloadFileResp {
    bytes file = 1;
}